--- a/ios/.xcode.env
+++ b/ios/.xcode.env
@@ -8,4 +8,5 @@
 # Customize the NODE_BINARY variable here.
 # For example, to use nvm with brew, add the following line
 # . "$(brew --prefix nvm)/nvm.sh" --no-use
-export NODE_BINARY=$(command -v node)
+# export NODE_BINARY=$(command -v node)
+export NODE_BINARY=/Users/guilhermecordeiro/.nvm/versions/node/v22.19.0/bin/node
