--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -42,3 +42,8 @@ hermesEnabled=true
 # This allows your app to draw behind system bars for an immersive UI.
 # Note: Only works with ReactActivity and should not be used with custom Activity.
 edgeToEdgeEnabled=false
+
+MYAPP_RELEASE_STORE_FILE=../keystores/ecoop.jks
+MYAPP_RELEASE_KEY_ALIAS=ecoop
+MYAPP_RELEASE_STORE_PASSWORD=Ecooperativa@547
+MYAPP_RELEASE_KEY_PASSWORD=Ecooperativa@547
